[gd_scene load_steps=3 format=3 uid="uid://d4avw33snp7bc"]

[ext_resource type="Script" path="res://lib/settings/components/stin_input_slider.gd" id="1_eq8p1"]
[ext_resource type="Theme" uid="uid://dfe36tnn0c1ud" path="res://generic/themes/theme.tres" id="2_gyhnq"]

[node name="SettingsInputSlider" type="VBoxContainer"]
script = ExtResource("1_eq8p1")

[node name="Title" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_gyhnq")
bbcode_enabled = true
text = "[Setting]"
fit_content = true

[node name="Slider" type="HSlider" parent="."]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_gyhnq")

[connection signal="drag_ended" from="Slider" to="." method="_on_slider_drag_ended"]
[connection signal="drag_started" from="Slider" to="." method="_on_slider_drag_started"]
[connection signal="focus_entered" from="Slider" to="." method="_on_slider_focus_entered"]
[connection signal="focus_exited" from="Slider" to="." method="_on_slider_focus_exited"]
[connection signal="value_changed" from="Slider" to="." method="_on_slider_value_changed"]
